# autoverse

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  WASM.md  WGPU_COMPUTE_SPEC.md  config.toml  index.html  justfile  main.js.map  viewer3d.html
.cargo/: config.toml
.claude/: settings.json
.claude/skills/rust-performance/: SKILL.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  cleanup-preview.yml  deploy-pages.yml  deploy-preview.yml
assets/: index-BA_gulGS.js  index-Ce4t-bUy.js  index-Cty-mrZZ.js  index-D0ZoA_uG.js  index-D8W7eNnd.js  index-bkcI1sRt.js  main-Ci8TZ6AM.js
benches/: propagator.rs
docs/: 3d-upgrade-evaluation.md  PARAMETER_EMBEDDING.md  math.md
docs/examples/: evolution-web-worker.md
examples/: evolution_perf.rs  glider.json  glider.seed.json  multispecies.json  multispecies.seed.json  sphere3d.json  sphere3d.seed.json  torus3d.json  torus3d.seed.json
examples/web/: README.md  index.html
pkg/: flow_lenia.js  flow_lenia_bg.wasm
plugins/autoverse-tools/: .lsp.json
plugins/autoverse-tools/.claude-plugin/: plugin.json
plugins/autoverse-tools/agents/: issue-tracker.md
preview/pr-30/: index.html  main.js  main.js.map
preview/pr-30/pkg/: flow_lenia.js  flow_lenia_bg.wasm
preview/pr-32/: main.js  main.js.map  styles.css
preview/pr-32/pkg/: flow_lenia.d.ts  flow_lenia.js  flow_lenia_bg.wasm  flow_lenia_bg.wasm.d.ts
preview/pr-33/pkg/: flow_lenia.d.ts  flow_lenia_bg.wasm  flow_lenia_bg.wasm.d.ts
preview/pr-37/: main.js  main.js.map
preview/pr-37/pkg/: flow_lenia_bg.wasm
preview/pr-38/: index.html
preview/pr-38/assets/: index-B1zce6Qx.js  index-BZzxx0Ep.js
preview/pr-39/: index.html  viewer3d.html
preview/pr-39/assets/: main-Bz8I8fA0.js  main-Cgdql2jT.js  main-NulWWJ6T.js  viewer3d-BoeJ2og7.js  viewer3d-mJlYIWF7.js
preview/pr-39/pkg/: flow_lenia.js  flow_lenia_bg.wasm
preview/pr-41/: index.html
preview/pr-41/assets/: flow_lenia-BzrPLGxh.js  index-5w7zp6ig.js  index-B48wDyS5.js  index-BSRUAJA7.js  index-BTYr3giA.css  index-CjIF9Url.js  index-DIy3Gqn0.js  index-DurnmpBP.js  index-H_q1ba2w.css  index-LIDEGr6D.js  index-LSnJgZuq.js
preview/pr-41/pkg/: flow_lenia.d.ts  flow_lenia.js  flow_lenia_bg.wasm  flow_lenia_bg.wasm.d.ts
preview/pr-42/: index.html
preview/pr-42/assets/: index-De-W6lJV.js
preview/pr-43/: index.html
preview/pr-43/assets/: index-CisCFo_F.js
preview/pr-43/pkg/: flow_lenia_bg.wasm
preview/pr-44/: index.html
preview/pr-44/assets/: index-DMG8Wi1i.js  index-YPc8VNIG.css
preview/pr-44/pkg/: flow_lenia_bg.wasm
preview/pr-46/: index.html
preview/pr-46/assets/: index-2qXXcB5a.js
preview/pr-46/pkg/: flow_lenia_bg.wasm
preview/pr-47/: index.html
preview/pr-47/assets/: index-BaqRxjAD.js  index-Dpgey6Vg.js
preview/pr-47/pkg/: flow_lenia_bg.wasm
preview/pr-48/: index.html
preview/pr-48/assets/: index-BO3_BKZz.js  index-C3oaXruK.css
preview/pr-48/pkg/: flow_lenia_bg.wasm
preview/pr-49/: index.html
preview/pr-49/assets/: index-DTd_rmEP.js
preview/pr-49/pkg/: flow_lenia_bg.wasm
preview/pr-50/: index.html
preview/pr-50/assets/: index-Bn5cIcpY.js
preview/pr-50/pkg/: flow_lenia_bg.wasm
preview/pr-51/: index.html
preview/pr-51/assets/: index-BRpUIUYv.js  index-BfRCVHfm.css  index-CfJ3U0BB.css  index-DO59Oo1J.css  index-DYyKafUW.js  index-DeEHMlEA.js  index-DnsUwMOz.css  index-fJywERfC.js
preview/pr-51/pkg/: flow_lenia_bg.wasm
preview/pr-52/: index.html
preview/pr-52/assets/: index-Dhd6m3L9.js
preview/pr-52/pkg/: flow_lenia_bg.wasm
preview/pr-53/: index.html
preview/pr-53/assets/: index-BgTViNTK.css  index-DFytyafr.js
preview/pr-53/pkg/: flow_lenia_bg.wasm
preview/pr-54/: index.html
preview/pr-54/assets/: index-DMqeLiK6.js  index-Db2VM3oT.js
preview/pr-54/pkg/: flow_lenia.js  flow_lenia_bg.wasm
preview/pr-55/: index.html
preview/pr-55/assets/: index-BiYLtYk9.js  index-CrU1VbgG.css
preview/pr-55/pkg/: flow_lenia_bg.wasm
preview/pr-56/: index.html
preview/pr-56/assets/: index-RwQft0GM.js
preview/pr-56/pkg/: flow_lenia_bg.wasm
preview/pr-57/: index.html  viewer3d.html
preview/pr-60/: index.html  viewer3d.html
preview/pr-61/: index.html  viewer3d.html
scripts/: view_animation.py
src/: lib.rs  main.rs  wasm.rs
src/animation/: format.rs  mod.rs  player.rs  recorder.rs
src/compute/: direct_convolution.rs  embedded_propagator.rs  fft.rs  fft3d.rs  flow.rs  flow3d.rs  gradient.rs  gradient3d.rs  growth.rs  kernel.rs  kernel3d.rs  mod.rs  param_advection.rs  propagator.rs  propagator3d.rs  reintegration.rs  reintegration3d.rs
src/schema/: config.rs  embedding.rs  evolution.rs  mod.rs  seed.rs
web/: .gitignore  CLAUDE.md  biome.json  build.ts  bunfig.toml  dev-server.ts  index.html  package-lock.json  package.json  tsconfig.json  viewer3d.html  vite.config.ts
web-reference/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
web-reference/components/: GlitchText.tsx  SimulationCanvas.tsx  TUIBox.tsx
web/src/: App.svelte  evolution-panel.ts  evolution.ts  evolution.worker.ts  interaction.ts  main.ts  presets.ts  renderer.ts  simulation.ts  styles.css  types.ts  ui.ts  wasm.ts
(+57 files in other folders)
