[package]
name = "flow-lenia"
version = "0.1.0"
edition = "2024"
authors = ["Nathan Gage <contact@nathangage.co>"]
description = "Flow Lenia - Mass conservative continuous cellular automata"
license = "MIT"
rust-version = "1.85"

[lib]
name = "flow_lenia"
path = "src/lib.rs"

[[bin]]
name = "flow-lenia"
path = "src/main.rs"

[dependencies]
# FFT for fast convolution
rustfft = "6.2"

# Serialization for config/state
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parallel computation
rayon = "1.10"

# Math utilities
num-complex = "0.4"

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "propagator"
harness = false

# CI profile: optimized for fast compilation in CI environments
# Uses minimal debug info and lower optimization for faster builds
[profile.ci]
inherits = "dev"
# Line tables only - enough for panic backtraces but much smaller
debug = "line-tables-only"
# Split debug info for faster linking (when not stripped)
split-debuginfo = "unpacked"

# Dependencies in CI profile: no debug info at all
[profile.ci.package."*"]
debug = false
