[package]
name = "flow-lenia"
version = "0.1.0"
edition = "2024"
authors = ["Nathan Gage <contact@nathangage.co>"]
description = "Flow Lenia - Mass conservative continuous cellular automata"
license = "MIT"
rust-version = "1.92"

[lib]
name = "flow_lenia"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "flow-lenia"
path = "src/main.rs"

[features]
default = ["native"]
native = []  # Marks native build
wasm = []    # Marks WASM build
dhat-heap = ["dhat"]  # Heap profiling
gpu = []     # Marks GPU compute backend

[dependencies]
# FFT for fast convolution (WASM-compatible)
rustfft = "6.2"

# GPU compute (WebGPU/wgpu)
wgpu = "28"
bytemuck = { version = "1.21", features = ["derive"] }

# Serialization for config/state
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math utilities
num-complex = "0.4"

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"

# Optional: Heap profiling
dhat = { version = "0.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native-only: Parallel computation
rayon = "1.10"

# Native-only: Random number generation for evolution
rand = "0.8"
rand_distr = "0.4"

# Native-only: Logging backend
env_logger = "0.11"

# Native-only: Async runtime for GPU
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-specific: JavaScript bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

# WASM-specific: Logging to console
console_error_panic_hook = "0.1"
wasm-logger = "0.2"

# WASM-specific: Async for GPU
wasm-bindgen-futures = "0.4"
futures-channel = "0.3"

# WASM-specific: Random number generation
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.6"
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "propagator"
harness = false

# Used via --profile ci in GitHub Actions
[profile.ci]
inherits = "dev"
debug = "line-tables-only"
split-debuginfo = "unpacked"

# wasm-pack configuration
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.ci.package."*"]
debug = false
